# flameiq

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  architecture.md
flameiq/: cli.py  config.py  runner.py
flameiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flameiq/engine/: collector.py  sampler.py
